--- a/【模組一】訂單建立（業務）.html
+++ b/【模組一】訂單建立（業務）.html
@@ -13,7 +13,7 @@
       
       <!-- 客戶資訊 -->
       <div class="mb-3">
-        <label class="form-label">客戶名稱</label>
+        <label class="form-label">客戶customer名稱</label>
         <input type="text" class="form-control" name="customerName" required>
       </div>
 
